[project]
name = "voi-agente-gpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "elevenlabs>=2.39.0",
    "fastapi>=0.135.1",
    "langchain>=1.2.12",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langgraph>=1.1.2",
    "pyttsx3>=2.99",
    "scipy>=1.17.1",
    "silero-vad>=6.2.1",
    "sounddevice>=0.5.5",
    "torch>=2.10.0",
    "uvicorn>=0.42.0",
    "websocket-client>=1.9.0",
    "websockets>=16.0",
]
